--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@700&display=swap');
+
 body {
-    text-align: center;
-    background-color: #f2f2f2;
+    background-color: hsl(30, 38%, 92%); 
+    padding: 5%;
+    display: flex;
+    height: 100%;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
 }
 
 * {
     margin: 0%;
+    box-sizing: border-box;
 }
 
 .container {
     background-color: white;
     box-shadow: 0 0 1px;
-    border-radius: 10px 10px 0 0;
-    width: 100%;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .desktop-image {
@@ -19,33 +28,33 @@ body {
 }
 
 .perfume-image {
-    box-sizing: border-box;
-    border-radius: 10px 10px 0 0;
     width: 100%;
 }
 
 .hero-section {
-    padding: 1.3em;
-    text-align: justify; 
+    padding: 1.5em;
+    text-align: justify;
 }
 
 .perfume {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: montserrat;
     letter-spacing: .2em;
     text-transform: uppercase;
-    font-weight: 500;
+    font-weight: 600;
     color: rgba(128, 128, 128, 0.904);
     margin-bottom: .6em;
 }
 
-h1 {
+.main-heading {
     margin-bottom: .5em;
+    font-size: 32px;
+    font-family: fraunces;
 }
 
 .description {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    line-height: 23px;
-    color: rgba(128, 128, 128, 0.904);
+  font-family: montserrat;
+  line-height: 23px;
+  color: rgba(128, 128, 128, 0.904);
 }
 
 .price {
@@ -57,8 +66,10 @@ h1 {
     font-weight: bold;
     margin-right: .7em;
     font-size: 2em;
+    font-family: fraunces;
 }
 .cost-price {
+    font-family: montserrat;
     text-decoration: line-through;
     margin-top: .6em;
     color: rgba(128, 128, 128, 0.904);
@@ -71,7 +82,7 @@ h1 {
     background-color: rgba(0, 128, 90, 0.856);
     text-align: center;
     padding: .6em;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: montserrat;
     border-radius: 10px;
     cursor: pointer;
 }
@@ -79,61 +90,33 @@ h1 {
     background-color: rgb(0, 128, 90);
 }
 
-.attribution {
-  display: none;
-}
 
-
-@media only screen and (min-width: 768px){
-
+@media only screen and (min-width: 760px){
+  
   .container {
     display: flex;
-    border-radius: 0 10px 10px 0;
-    box-sizing: border-box;
+    width: 578.63px;
+    max-height: 455.38px;
   }
 
   .desktop-image {
     display: inline-block;
-    border-radius: 10px 0 0 10px;
-    box-sizing: border-box;
     width: 50%;
-    height: 100vh;
   }
 
   .perfume-image {
     display: none;
   }
+
+  .perfume{
+    padding-bottom: .7em;
+  }
+
   .hero-section{
-    width: 50%;
-    padding: 0% 3em;
-    box-sizing: border-box;
-    position: absolute;
-    left: 50%;
-    top: 5%;
-  } 
-
-  .description {
-    line-height: 1.8em;
+    width: 50%; 
+    align-self: center;
   }
 
-  .attribution {
-    display: none;
-  }
-
-  .perfume {
-    margin: 1.5em 0 3em 0;
-  }
-
-  h1 {
-    margin-bottom: 1em;
-    line-height: 1.5em;
-  }
-
-  .description {
-    margin-bottom: 3.5em;
-  }
-
-  .price {
-    margin-bottom: 2.5em;
-  }
 }
+
+
