--- a/style.css
+++ b/style.css
@@ -2,11 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@700&display=swap');
 
 body {
-    background-color: hsl(30, 38%, 92%); 
-    padding: 5%;
+    background-color: hsl(30, 38%, 92%);
+    padding: 0 5%; 
     display: flex;
-    height: 100%;
-    min-height: 100vh;
+    height: 100vh;
     align-items: center;
     justify-content: center;
 }
